@@ -1,7 +1,8 @@
 2006-12-22 Patrick Galbraith <patg@patg.net>, Alexey Stroganov (4.00)
 * Added Alexey Stroganov's patch which fixes varying number of columns in 
   multiple result sets. Added new test cases to 80procs.t based of his
-  test script (bug #21028) (Thanks Alexey!)
+  test script (bug #21028) (Thanks Alexey!). Also fixed 80procs.t to allow
+  'CALL' to be prepared
 * Added Philip Stoev's patch for DATA_TYPE date and time columns (bug #23988)
   (Thanks Philip!) 
 * Reworked (for working with 4.0, which doesn't support sqlstate) Philip Stoev's 
